# demotool

./: .gitignore  .gitmodules  IDEAS.md  README.md  main.py  mise.toml  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: demotool-general-guidelines.mdc
demotool/: __init__.py  cli.py  exceptions.py  images.py  logging.py  session.py  vm.py
examples/: basic_demo.py
specs/: 00-general.md  01-vm-management.md  02-video-recording.md  03-demo-desktop-control.md
tests/: __init__.py  test_exceptions.py  test_images.py  test_logging.py  test_vm.py
