[project]
name = "demotool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio-throttle>=1.0.2",
    "libvirt-python>=8.0.0",
    "mcp[server]>=1.6.0",
    "prometheus-client>=0.16.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "python-dotenv>=1.0.0",
]
