[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demotool"
version = "0.1.0"
description = "Automated demo creation using virtual machines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Demotool Contributors" }]
keywords = ["demo", "virtualization", "automation", "vm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = ["libvirt-python>=9.0.0", "xdg>=6.0.0", "psutil>=5.9.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
demotool = "demotool.cli:main"

[project.urls]
Homepage = "https://github.com/ifireball/demotool"
Repository = "https://github.com/ifireball/demotool"
Issues = "https://github.com/ifireball/demotool/issues"

[tool.hatch.build.targets.wheel]
packages = ["demotool"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
